# learning-latent-dynamics

./: .gitignore  README.md  config.py  engine.py  eval.py  mujoco_data.py  multi_train.sh  pyproject.toml  run_utils.py  train.py  utils.py  visualize_mlp.py  visualize_rnn.py
configs/: base_config.py  exp1.py  exp2.py  exp3.py  exp4.py  exp5.py  exp6.py  exp7.py  exp_baseline.py
models/dynamics/: mlp_dynamics.py  rnn_dynamics.py
models/e2c/: common.py  mlp_e2c.py  rnn_e2c.py
models/vae/: conv_vae.py
sim/: arm.mjcf.xml  mujoco_data.py  visualize_trajectory.py
